# mcp-jieba

./: .gitignore  README.md  mcp-jieba.code-workspace  pyproject.toml
src/mcp_jieba/: __main__.py  engine.py  server.py
src/mcp_jieba/resources/: merge_stopwords.py  stopwords.txt
tests/: compare_transports.py  lorem.txt  test_all.py  test_bm25_numpy.py  test_http.py
