[project]
name = "mcp-jieba"
version = "0.1.0"
description = "A Model Context Protocol server for Chinese word segmentation using rjieba"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "rjieba>=0.1.11",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]

[project.scripts]
mcp-jieba = "mcp_jieba.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_jieba"]
